fixed pre text wrapping

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -318,6 +318,7 @@ pre {
   padding: 13px;
   background: rgba($gray-500, 0.4);
   line-height: 1.5;
+  white-space: normal;
 }
 
 /* Responsive Typography */
